--- a/index.html
+++ b/index.html
@@ -9,8 +9,8 @@
 <h3 style="text-align: left;"><a href="https://drive.google.com/drive/folders/1SiA8L7VXDkFEEPa7xeOljgYp9NtHWh9k?usp=sharing">Link To Meeting Minutes</a></h3>
 <h3 style="text-align: left;"><a href="https://drive.google.com/drive/folders/1ZLoX_DjNfuy_VRrmTw2jWsBDZ1gMN81O?usp=sharing">Link To Financial Reports</a></h3>
 <h3 style="text-align: left;"><a href="https://drive.google.com/drive/folders/1Zw5lC14JmXQiXpG07zFy4X4eggJajYNx?usp=sharing">Link To Property Inventory</a></h3>
-<h3 style="text-align: left;"><a href="http://anchorageswcd.org/grants.html">Meet Our Staff</a></h3>
-<h3 style="text-align: left;"><a href="http://anchorageswcd.org/meet_staff.html">Current Grants</a></h3>
+<h3 style="text-align: left;"><a href="http://anchorageswcd.org/grants.html">Current Grants</a></h3>
+<h3 style="text-align: left;"><a href="http://anchorageswcd.org/meet_staff.html">Meet Our Staff</a></h3>
 <h3 style="text-align: left;"><a href="https://drive.google.com/file/d/1fw6rN9ScUquFy19hNIETCFKdMsfbNZWj/view?usp=sharing">New Cooperator Form</a></h3>
 <h4 style="text-align: center;">Meetings Calendar:</h4>
 <p style="text-align: center;">&nbsp;</p>
