--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <p style="text-align: center;">&nbsp;</p>
 <h3 style="text-align: left;"><em>The Anchorage Soil and Water Conservation District is a recognized member of the Alaska Association of Conservation Districts, serving the Anchorage municipal area.&nbsp;</em></h3>
 <p>&nbsp;</p>
-<h3 style="text-align: left;">The Board of Supervisors of the Anchorage Soil and Water Conservation District are Steve Gerleck (Chair), Emily Davies (Vice Chair), Anne Billman (Secretary), and Hans Thompson (Treasurer). Our contract email is <a href="mailto:AnchorageSWCD@gmail.com">AnchorageSWCD@gmail.com</a>.</h3>
+<h3 style="text-align: left;">The Board of Supervisors of the Anchorage Soil and Water Conservation District are Steve Gerleck (Chair), Emily Davies (Vice Chair), Anne Billman (Secretary), and Hans Thompson (Treasurer). Our contact email is <a href="mailto:AnchorageSWCD@gmail.com">AnchorageSWCD@gmail.com</a>.</h3>
 <h3 style="text-align: left;"><a href="https://drive.google.com/drive/folders/1ODXGdKE-bQGZZQA2_cn_VC_zkhIVekzY?usp=sharing">Link To Newsletters</a></h3>
 <h3 style="text-align: left;"><a href="https://drive.google.com/drive/folders/1NxU_fURB2ILPDFs4sjC3rTWC5fLdCwt_?usp=sharing">Link To Resolutions</a></h3>
 <h3 style="text-align: left;"><a href="https://drive.google.com/drive/folders/1SiA8L7VXDkFEEPa7xeOljgYp9NtHWh9k?usp=sharing">Link To Meeting Minutes</a></h3>
