--- a/index.html
+++ b/index.html
@@ -1,19 +1,127 @@
-<!-- Global site tag (gtag.js) - Google Analytics -->
-<h1 style="text-align: center;">Anchorage Soil and Water Conservation District Website</h1>
-<p style="text-align: center;">&nbsp;</p>
-<h3 style="text-align: left;"><em>The Anchorage Soil and Water Conservation District is a recognized member of the Alaska Association of Conservation Districts, serving the Anchorage municipal area.&nbsp;</em></h3>
-<p>&nbsp;</p>
-<h3 style="text-align: left;">The Board of Supervisors of the Anchorage Soil and Water Conservation District are Steve Gerleck (Chair), Emily Davies (Vice Chair), Anne Billman (Secretary), and Hans Thompson (Treasurer). Our contact email is <a href="mailto:AnchorageSWCD@gmail.com">AnchorageSWCD@gmail.com</a>.</h3>
-<h3 style="text-align: left;"><a href="https://drive.google.com/drive/folders/1ODXGdKE-bQGZZQA2_cn_VC_zkhIVekzY?usp=sharing">Link To Newsletters</a></h3>
-<h3 style="text-align: left;"><a href="https://drive.google.com/drive/folders/1NxU_fURB2ILPDFs4sjC3rTWC5fLdCwt_?usp=sharing">Link To Resolutions</a></h3>
-<h3 style="text-align: left;"><a href="https://drive.google.com/drive/folders/1SiA8L7VXDkFEEPa7xeOljgYp9NtHWh9k?usp=sharing">Link To Meeting Minutes</a></h3>
-<h3 style="text-align: left;"><a href="https://drive.google.com/drive/folders/1ZLoX_DjNfuy_VRrmTw2jWsBDZ1gMN81O?usp=sharing">Link To Financial Reports</a></h3>
-<h3 style="text-align: left;"><a href="https://drive.google.com/drive/folders/1Zw5lC14JmXQiXpG07zFy4X4eggJajYNx?usp=sharing">Link To Property Inventory</a></h3>
-<h3 style="text-align: left;"><a href="http://anchorageswcd.org/grants.html">Current Grants</a></h3>
-<h3 style="text-align: left;"><a href="http://anchorageswcd.org/meet_staff.html">Meet Our Staff</a></h3>
-<h3 style="text-align: left;"><a href="https://drive.google.com/file/d/1fw6rN9ScUquFy19hNIETCFKdMsfbNZWj/view?usp=sharing">New Cooperator Form</a></h3>
-<h4 style="text-align: center;">Meetings Calendar:</h4>
-<p style="text-align: center;">&nbsp;</p>
-<p style="text-align: center;"><iframe style="border: 0;" src="https://calendar.google.com/calendar/embed?src=anchorageswcd%40gmail.com&amp;ctz=America%2FAnchorage" width="800" height="600" frameborder="0" scrolling="no"></iframe></p>
-<p>&nbsp;</p>
+<!DOCTYPE html>
+<html lang="en">
+	<head>
+		<meta charset="UTF-8">
+			<meta name="viewport" content="width=device-width, initial-scale=1.0">
+				<title>Anchorage Soil and Water Conservation District</title>
+				<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
+					<style>
+        body {
+            font-family: Arial, sans-serif;
+            color: #333;
+            background-color: #f5f5f5;
+            line-height: 1.6;
+        }
+    a {
+        color: #008c45;
+        text-decoration: none;
+    }
 
+    a:hover {
+        color: #00682b;
+    }
+
+    .container {
+        max-width: 1200px;
+        margin: 0 auto;
+        padding: 30px;
+    }
+
+    header {
+        background-color: #004d21;
+        padding: 20px;
+        text-align: center;
+        color: #fff;
+    }
+
+    header h1 {
+        font-size: 36px;
+        font-weight: normal;
+    }
+
+    header h3 {
+        font-size: 18px;
+        font-weight: normal;
+        margin-top: 0;
+    }
+
+    ul {
+        list-style-type: none;
+        margin: 0;
+        padding: 0;
+        display: flex;
+        flex-direction: column;
+        align-items: flex-start;
+        gap: 10px;
+    }
+
+    ul li {
+        font-size: 18px;
+    }
+
+    ul li i {
+        margin-right: 10px;
+    }
+
+    h4 {
+        font-size: 22px;
+        font-weight: normal;
+        margin-bottom: 20px;
+    }
+
+    iframe {
+        border: 0;
+    }
+</style>
+				</head>
+				<body>
+					<header>
+						<h1>Anchorage Soil and Water Conservation District</h1>
+						<h3>A Member of the Alaska Association of Conservation Districts</h3>
+					</header>
+					<section class="container">
+						<h3>Board of Supervisors:</h3>
+						<p>Steve Gerleck (Chair), Emily Davies (Vice Chair), Anne Billman (Secretary), and Hans Thompson (Treasurer)</p>
+						<p>Contact us at: 
+							<a href="mailto:AnchorageSWCD@gmail.com">AnchorageSWCD@gmail.com</a>
+						</p>
+						<h3>Quick Links:</h3>
+						<ul>
+							<li>
+								<i class="fas fa-file-alt"></i>
+								<a href="https://drive.google.com/drive/folders/1ODXGdKE-bQGZZQA2_cn_VC_zkhIVekzY?usp=sharing">Newsletters</a>
+							</li>
+							<li>
+								<i class="fas fa-file-alt"></i>
+								<a href="https://drive.google.com/drive/folders/1NxU_fURB2ILPDFs4sjC3rTWC5fLdCwt_?usp=sharing">Resolutions</a>
+							</li>
+							<li>
+								<i class="fas fa-file-alt"></i>
+								<a href="https://drive.google.com/drive/folders/1SiA8L7VXDkFEEPa7xeOljgYp9NtHWh9k?usp=sharing">Meeting Minutes</a>
+							</li>
+							<li>
+								<i class="fas fa-file-alt"></i>
+								<a href="https://drive.google.com/drive/folders/1ZLoX_DjNfuy_VRrmTw2jWsBDZ1gMN81O?usp=sharing">Link To Financial Reports</a>
+							</li>
+							<li>
+								<i class="fas fa-file-alt"></i>
+								<a href="https://drive.google.com/drive/folders/1Zw5lC14JmXQiXpG07zFy4X4eggJajYNx?usp=sharing">Link To Property Inventory</a>
+							</li>
+							<h3 style="text-align: left;">
+								<a href="http://anchorageswcd.org/grants.html">Current Grants</a>
+							</h3>
+							<h3 style="text-align: left;">
+								<a href="http://anchorageswcd.org/meet_staff.html">Meet Our Staff</a>
+							</h3>
+							<h3 style="text-align: left;">
+								<a href="https://drive.google.com/file/d/1fw6rN9ScUquFy19hNIETCFKdMsfbNZWj/view?usp=sharing">New Cooperator Form</a>
+							</h3>
+							<h4 style="text-align: center;">Meetings Calendar:</h4>
+							<p style="text-align: center;">&nbsp;</p>
+							<p style="text-align: center;">
+								<iframe style="border: 0;" src="https://calendar.google.com/calendar/embed?src=anchorageswcd%40gmail.com&amp;ctz=America%2FAnchorage" width="800" height="600" frameborder="0" scrolling="no"></iframe>
+							</p>
+							<p>&nbsp;</p>
+
+
+    
