--- a/meet_staff.html
+++ b/meet_staff.html
@@ -1,11 +1,96 @@
-<!-- Global site tag (gtag.js) - Google Analytics -->
-<h1 style="text-align: center;">Anchorage Soil and Water Conservation District Website</h1>
-<p style="text-align: center;">&nbsp;</p>
-<p style="text-align: center;">&nbsp;</p>
-<div><strong>Meet Our Staff:</strong></div>
-<div>&nbsp;</div>
-<div style="padding-left: 40px;">District Manager - <em>Jessica Sharp</em> has 18 years of experience working in natural resource management in Alaska, including 7 years with Fairbanks SWCD and about 3 years with Homer SWCD. She brings expertise in project management, forestry, soils, agriculture, invasive plant management, and education. She is excited to build up Anchorage SWCD and to help address the conservation needs within the Anchorage District.&nbsp;</div>
-<div style="padding-left: 40px;">&nbsp;</div>
-<div style="padding-left: 40px;">&nbsp;</div>
-<div style="padding-left: 40px;">Invasive Species Specialist - <em>Hannah Thompson</em> moved to Alaska in Spring of 2022. She has a BS in Ecology, 3 years of experience in biological research, and almost 1 year of experience working with Invasive Species in Anchorage. She brings expertise in GIS, plant identification, invasive plant management, and land management. She is excited to address Invasive Species in Anchorage, and passionate about conservation, ecology, fish, wildlife, and of course, plants. 
-&nbsp;</div>
+<!DOCTYPE html>
+<html lang="en">
+	<head>
+		<meta charset="UTF-8">
+			<meta name="viewport" content="width=device-width, initial-scale=1.0">
+				<title>Anchorage Soil and Water Conservation District</title>
+				<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
+					<style>
+        body {
+            font-family: Arial, sans-serif;
+            color: #333;
+            background-color: #f5f5f5;
+            line-height: 1.6;
+        }
+    a {
+        color: #008c45;
+        text-decoration: none;
+    }
+
+    a:hover {
+        color: #00682b;
+    }
+
+    .container {
+        max-width: 1200px;
+        margin: 0 auto;
+        padding: 30px;
+    }
+
+    header {
+        background-color: #004d21;
+        padding: 20px;
+        text-align: center;
+        color: #fff;
+    }
+
+    header h1 {
+        font-size: 36px;
+        font-weight: normal;
+    }
+
+    header h3 {
+        font-size: 18px;
+        font-weight: normal;
+        margin-top: 0;
+    }
+
+    ul {
+        list-style-type: none;
+        margin: 0;
+        padding: 0;
+        display: flex;
+        flex-direction: column;
+        align-items: flex-start;
+        gap: 10px;
+    }
+
+    ul li {
+        font-size: 18px;
+    }
+
+    ul li i {
+        margin-right: 10px;
+    }
+
+    h4 {
+        font-size: 22px;
+        font-weight: normal;
+        margin-bottom: 20px;
+    }
+
+    iframe {
+        border: 0;
+    }
+</style>
+				</head>
+				<body>
+					<header>
+						<h1>Anchorage Soil and Water Conservation District</h1>
+						<h3>A Member of the Alaska Association of Conservation Districts</h3>
+					</header>
+					<p style="text-align: center;">&nbsp;</p>
+					<p style="text-align: center;">&nbsp;</p>
+					<div>
+						<strong>Meet Our Staff:</strong>
+					</div>
+					<div>&nbsp;</div>
+					<div style="padding-left: 40px;">District Manager - 
+						<em>Jessica Sharp</em> has 18 years of experience working in natural resource management in Alaska, including 7 years with Fairbanks SWCD and about 3 years with Homer SWCD. She brings expertise in project management, forestry, soils, agriculture, invasive plant management, and education. She is excited to build up Anchorage SWCD and to help address the conservation needs within the Anchorage District.&nbsp;
+					</div>
+					<div style="padding-left: 40px;">&nbsp;</div>
+					<div style="padding-left: 40px;">&nbsp;</div>
+					<div style="padding-left: 40px;">Invasive Species Specialist - 
+						<em>Hannah Thompson</em> moved to Alaska in Spring of 2022. She has a BS in Ecology, 3 years of experience in biological research, and almost 1 year of experience working with Invasive Species in Anchorage. She brings expertise in GIS, plant identification, invasive plant management, and land management. She is excited to address Invasive Species in Anchorage, and passionate about conservation, ecology, fish, wildlife, and of course, plants. 
+&nbsp;
+					</div>
