--- a/meet_staff.html
+++ b/meet_staff.html
@@ -92,5 +92,9 @@
 					<div style="padding-left: 40px;">&nbsp;</div>
 					<div style="padding-left: 40px;">Invasive Species Specialist - 
 						<em>Hannah Thompson</em> moved to Alaska in Spring of 2022. She has a BS in Ecology, 3 years of experience in biological research, and almost 1 year of experience working with Invasive Species in Anchorage. She brings expertise in GIS, plant identification, invasive plant management, and land management. She is excited to address Invasive Species in Anchorage, and passionate about conservation, ecology, fish, wildlife, and of course, plants. 
+						<div style="padding-left: 40px;">&nbsp;</div>
+					<div style="padding-left: 40px;">&nbsp;</div>
+					<div style="padding-left: 40px;">Invasive Species Technician - 
+						<em>Ryan Stimson</em> is a born and raised Alaskan who graduated from King Tech HS in 2021. She went on to leave the state and travel the US for two years, where she developed a deep appreciation for ecology, urban agriculture, ethnobotany, and sustainable life practices. She's currently pursuing a certificate in Sustainable Agriculture in Mesa, AZ and is humbled to be bringing her newfound knowledge back to AK for the summer.  
 &nbsp;
 					</div>
