--- a/meet_staff.html
+++ b/meet_staff.html
@@ -91,7 +91,7 @@
 					</div>
 					<div style="padding-left: 40px;">&nbsp;</div>
 					<div style="padding-left: 40px;">&nbsp;</div>
-					<div style="padding-left: 40px;">Invasive Species Specialist - 
+					<div style="padding-left: 40px;">Invasive Species Program Leader - 
 						<em>Hannah Thompson</em> moved to Alaska in Spring of 2022. She has a BS in Ecology, 3 years of experience in biological research, and almost 1 year of experience working with Invasive Species in Anchorage. She brings expertise in GIS, plant identification, invasive plant management, and land management. She is excited to address Invasive Species in Anchorage, and passionate about conservation, ecology, fish, wildlife, and of course, plants. 
 					</div>
 					<div style="padding-left: 40px;">&nbsp;</div>
