--- a/grants.html
+++ b/grants.html
@@ -75,44 +75,128 @@
 </style>
 				</head>
 				<body>
-					<header>
-						<h1>Anchorage Soil and Water Conservation District</h1>
-						<h3>A Member of the Alaska Association of Conservation Districts</h3>
-					</header>
-					<p style="text-align: center;">&nbsp;</p>
-					<p style="text-align: center;">&nbsp;</p>
-					<div>
-						<p style="font-weight: 400;">
-							<strong>
-								<em>2022-2023 Urban Agriculture grant:</em>
-							</strong>
-						</p>
-						<p style="padding-left: 40px;">Alaska produces only five percent of its food, almost none of it in Anchorage (resulting in $1.9 billion leaving the state). Grocery stores have only a 3-5 day supply of most foods. Anchorage&rsquo;s (and Alaska&rsquo;s) food system is vulnerable because production is far away and connections of food to people are not a robust network. The Food Bank of Alaska estimates that one in seven people are food-insecure at any time, including one in five children (pre-pandemic).</p>
-						<p style="padding-left: 40px;">There is a strong demand for Alaska-grown food, as demonstrated by local support of farmers&rsquo; markets, community supported agriculture, and Alaska Grown initiatives. However, as the largest urban area, with over 40% of the state&rsquo;s population, Anchorage has unique challenges in supporting urban agriculture, improving food security, and increasing consumption of Alaska produced food. There are many groups already working to promote urban agriculture and food security in Anchorage. Our goal is to determine how best the Anchorage SWCD can assist and strengthen these efforts.</p>
-						<p style="padding-left: 40px;">Anchorage is the most populated and diverse city in Alaska. However, it lacks a fully staffed Cooperative Extension office, does not have a Natural Resources Conservation Service office, and the Agricultural Research Service is not in Alaska at all. Our farmers and gardeners are highly underserved when it comes to conservation technical assistance. In other areas of Alaska, Conservation Districts have stepped up to fill some of these gaps.&nbsp;As a newly re-formed Conservation District, the first step will be to make connections and find out what the existing needs are that are not being fulfilled within our area. Using this information, the Anchorage SWCD can formulate a strategic plan to address some of these gaps.</p>
-						<p style="padding-left: 40px;">As we work to assess the needs within our area and look at potential future projects, we will strive to answer the following questions:</p>
-						<p style="padding-left: 40px;">(1) What populations lack food in Anchorage and&nbsp;who is working to serve them?</p>
-						<p style="padding-left: 40px;">(2) Are there producers that would like to grow more? If so, what holds them back?</p>
-						<p style="padding-left: 40px;">(3) Are people in Anchorage who grow their own food lacking something they need, such as information, equipment, or suitable crop varieties?</p>
-						<p style="padding-left: 40px;">(4) What are the barriers for people who aspire to become agricultural producers?</p>
-						<p style="padding-left: 40px;">&nbsp;</p>
-						<p style="padding-left: 40px;">The Anchorage SWCD plans to&nbsp;assess the conservation technical assistance needs of our community and opportunities to improve the food security of Anchorage by:</p>
-						<ol>
-							<li style="list-style-type: none;">
-								<ol>
-									<li>Reviewing the existing reports that have been produced on Anchorage's food security, agricultural production, and associated environmental conditions.</li>
-									<li>Participating in the 2022 Alaska Food Festival and Conference, the 2022 Alaska Master Gardeners Conference, and the 2022 Alaska Association of Conservation Districts Conference to build partnerships for future urban agriculture projects. They will also provide opportunities for identifying which local conservation technical assistance needs are being unmet in our community.</li>
-									<li>Investigating the distribution of Alaska Grown foods within Anchorage and the accessibility of those foods to Anchorage's diverse ethnic and underserved populations. In doing so, we will look for opportunities where the distribution and accessibility could be improved.&nbsp;</li>
-									<li>Determining what partnerships are possible to promote programs such as AgrAbility, which makes agricultural production accessible to individuals with disabilities. &nbsp;</li>
-									<li>Reaching out to Alaska&rsquo;s network of community gardens to find out how we can support them or possible opportunities for expansion. &nbsp;&nbsp;</li>
-									<li>Engaging the local Alaska native Eklutna tribe, Anchorage's largest private landholder, to identify their conservation technical assistance needs are and possible areas of partnership in the future.</li>
-									<li>Interviewing stakeholders along the web of food production, import, processing, and consumption in Anchorage to find out their unmet needs and opportunities for Anchorage SWCD to play a role in supporting them. Additionally, we plan to interview social service entitities who are familiar with Anchorage&rsquo;s underserved populations and what their needs are; e.g. Food Bank, Alaska Community Foundation, Alaska Native Tribal Health Consortium, Cook Inlet Tribal Council, and Southcentral Foundation.</li>
-									<li>Meeting with the Natural Resources Conservation Service&rsquo;s (NRCS) state office and Wasilla office to explore opportunities for outreach in Anchorage and future partnerships.</li>
-									<li>Investigating the possibility of setting up a drop off location for soil samples to be aggregated and sent to an out of state lab for analysis, or the possibility of starting a soil testing program in which Anchorage SWCD staff would interpret the soil test results for landowners in our area.</li>
-									<li>Reporting on all our findings through quarterly and annual reports. The annual report will include a summary of all the information collected, a list and description of ranked project ideas for Anchorage SWCD to pursue in the future, and maps/diagrams of local food production and distribution within our District boundaries (extending to where food is produced and then sent to Anchorage, such as the Matanuska-Susitna valley).</li>
-								</ol>
-							</li>
-						</ol>
-						<p style="padding-left: 40px;">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Once Anchorage SWCD has made progress toward understanding the technical assistance needs and opportunities for improving the food security of Anchorage, our board members will be able to identify potential projects and look for funding. We will list and prioritize which projects we think are the best choices for Anchorage SWCD to pursue. We plan to discuss these projects with numerous partner organizations to help assess the feasibility of the different ideas.</p>
-						<p style="padding-left: 40px;">Urban agriculture is one of the top priorities for our District. This funding will help us to identify future projects that are needed, achievable, and can make an impact. The Anchorage SWCD is very newly re-formed, and this grant opportunity is a perfect fit for the type of initial planning and networking that will help us to be successful in the future.&nbsp;</p>
-					</div>
+  <h1>Current Grants:</h1>
+  <ol>
+    <li>
+      <h3>Early Detection and Rapid Response Invasive Species Control Program for Private Lands and Refuges</h3>
+      <p><strong>Funder:</strong> U.S. Fish and Wildlife Service</p>
+      <p>
+        This funding agreement is a cooperative effort with Homer SWCD. Through this agreement, Anchorage SWCD was able
+        to hire our Invasive Species Program Leader, Hannah, in October 2022. Hannah attended training, developed
+        partnerships, set up a GIS database which incorporates invasive species data from multiple stakeholders, set up a
+        system for collecting field data on invasive species infestations, became involved in the Anchorage Cooperative
+        Invasive Species Management Area (ANC-CISMA), and helped lead a Prioritization Workshop to prioritize species
+        and locations for invasive species management within the Anchorage SWCD boundaries. Hannah worked with
+        ANC-CISMA partners to edit and add content to a Strategic Management Plan for the Anchorage area, which will be
+        finalized in winter 2023-24.
+      </p>
+    </li>
+    <li>
+      <h3>Alaska Good Neighbor Authority High-Priority Invasive Plant Surveys and Restoration on BLM-Adjacent Lands</h3>
+      <p><strong>Funder:</strong> BLM</p>
+      <p>
+        The overall goal of this project is to restore and maintain the integrity of Anchorage’s forested ecosystem,
+        including the riparian functions, by keeping invasive plant species under control so diverse and resilient
+        native plant communities can thrive. ASWCD staff and volunteers will:
+      </p>
+      <ol type="a">
+        <li>Work with BLM and other ANC-Cooperative Invasive Species Management Area (CISMA) partners to refine the
+          priority species and survey locations for this project area;</li>
+        <li>Survey lands adjacent to the BLM Campbell Tract for the presence of invasive plants and document their
+          presence or absence by submitting data to the Alaska Exotic Plants Information Clearinghouse (AKEPIC);</li>
+        <li>Develop an adaptable restoration plan for treatment sites in riparian areas;</li>
+        <li>Review infestation data relative to ANC-CISMA priorities for invasive plant management;</li>
+        <li>Manage high-priority infestations using integrated pest management techniques;</li>
+        <li>Actively restore degraded areas by replanting native species if necessary to achieve healthy plant
+          communities.</li>
+      </ol>
+      <p>In late May 2023, Hannah and our new Invasive Species Technician, Ryan, began surveying lands adjacent to the BLM
+        Campbell Tract for invasive species.</p>
+    </li>
+    <li>
+      <h3>Cooperative Invasive Plant Management: Chugach National Forest Kenai Peninsula Zone North</h3>
+      <p><strong>Funder:</strong> U.S. Forest Service</p>
+      <p>
+        Anchorage SWCD will be performing control work on high priority invasive plant species in areas bordering
+        Chugach National Forest beginning in summer 2023. Control work will be based on sound integrated pest management
+        principles and practices and sites will be re-vegetated as needed with native plants to restore the treatment
+        areas to a healthy vegetative community. We will develop and build partnerships with local community volunteers,
+        stakeholders, and ANC-CISMA members to build capacity in managing invasive species as well as educating
+        landowners and the public about the identification and management of invasive species.
+      </p>
+    </li>
+    <li>
+      <h3>Alaska Invasive Plant Mini-Grant Program</h3>
+      <p><strong>Funder:</strong> Copper River Watershed Project</p>
+      <p>
+        This small project is focused on control of Prunus padus and Prunus virginiana in Anchorage and vicinity. We
+        have developed a Frequently Asked Questions Fact Sheet which explains Prunus control measures and complements
+        existing Cooperative Extension Service publications. Anchorage SWCD staff and volunteers have visited several
+        Prunus infestation sites to investigate control options and identify a suitable site for removing Prunus and
+        hosting volunteer event(s) this summer. We plan to complete at least one Prunus control demonstration project
+        this year using funds from the Mini-Grant.
+      </p>
+    </li>
+    <li>
+      <h3>Prunus Control Grant Phase IV</h3>
+      <p><strong>Funder:</strong> State of Alaska Department of Natural Resources Division of Forestry & Fire Protection</p>
+      <p>
+        This project is focused on survey of invasive Prunus padus and Prunus virginiana in select areas of the
+        Municipality of Anchorage, particularly areas bordering wild lands such as Chugach State Park. Anchorage SWCD
+        will begin reaching out to landowners on properties with these plants present to assess interest in removing the
+        trees and discuss options for management.
+      </p>
+    </li>
+    <li>
+      <h3>Whittier Integrated Pest Management</h3>
+      <p><strong>Funder:</strong> U.S. Forest Service through a Memorandum of Agreement with Kenai Watershed Forum</p>
+      <p>
+        Priority terrestrial invasive species will be treated using an integrated pest management approach during summer
+        2023 within the Whittier area. Whittier will be surveyed for invasive species and the data submitted to the AK
+        Exotic Plants Information Clearinghouse.
+      </p>
+    </li>
+    <li>
+      <h3>Southcentral Alaska Native Plant Production</h3>
+      <p><strong>Funder:</strong> U.S. Fish and Wildlife Service</p>
+      <p>
+        Anchorage SWCD is working in partnership with Palmer SWCD, Wasilla SWCD, Eklutna Tribal Conservation District,
+        and Knik Tribal Conservation District to build four-five small local outdoor native plant nurseries. These
+        nurseries will serve as sites to propagate native plant species for use in ecological restoration projects such
+        as culvert replacements, streambank erosion control projects, etc. We have hired a Native Plants Program
+        Leader, Dana, who will implement this program and be the technical advisor for the project. Native plant seed
+        will be collected locally and stored at the Plant Materials Center. This project is collaborative and builds
+        capacity at the Soil and Water Conservation Districts and Tribes for the development of a new native plants
+        industry to supply an unmet need within the state for hardy regionally appropriate restoration plants and seed.
+      </p>
+    </li>
+    <li>
+      <h3>JBER Cooperative Agreements</h3>
+      <p><strong>Funder:</strong> U.S. Army Corps of Engineers</p>
+      <p>
+        Anchorage SWCD is working in partnership with Palmer SWCD on 3 Scopes of Work on JBER. These projects include
+        vegetative management, hazard mitigation, and improvements to the Malamute Drop Zone on JBER. Palmer SWCD is
+        the Project Manager for the current projects within the Anchorage SWCD’s boundaries and the work is managed
+        under a Memorandum of Understanding between the Districts.
+      </p>
+    </li>
+    <li>
+      <h3>Urban Agriculture Technical Assistance and Outreach in Anchorage</h3>
+      <p><strong>Funder:</strong> Natural Resource Conservation Service</p>
+      <p>
+        Anchorage SWCD will serve as a local contact for the Alaska NRCS in the Anchorage area and will conduct
+        outreach to increase awareness of NRCS programs and technical assistance resources within the Anchorage SWCD
+        boundaries. We will support the Wasilla NRCS Office with outreach efforts or technical assistance within the
+        Anchorage SWCD boundaries. Anchorage SWCD staff will provide technical assistance to landowners who reach out
+        to the Anchorage SWCD about resource concerns including nutrient management, manure management, forest health,
+        etc. Anchorage SWCD will help set up and staff booths at conferences and/or the State Fair. We will organize
+        the Local Working Group with Anchorage area partners. Workshops will be hosted in Anchorage addressing natural
+        resource conservation topics and our staff will actively reach out to local farms to offer our services and
+        technical assistance. This funding agreement helps build capacity for our District and will allow us to hire 1
+        person to assist the Anchorage SWCD District Manager with the agriculture and soils programs. This person will
+        attend training as available through NRCS and will be trained internally in nutrient management, Alaskan
+        agriculture, and natural resource management.
+      </p>
+    </li>
+  </ol>
+</body>
