--- a/meet_staff.html
+++ b/meet_staff.html
@@ -99,3 +99,9 @@
 					<div style="padding-left: 40px;">Invasive Species Technician - 
 						<em>Ryan Stimson</em> is a born and raised Alaskan who graduated from King Tech HS in 2021. She went on to leave the state and travel the US for two years, where she developed a deep appreciation for ecology, urban agriculture, ethnobotany, and sustainable life practices. She's currently pursuing a certificate in Sustainable Agriculture in Mesa, AZ and is humbled to be bringing her newfound knowledge back to AK for the summer.
 					</div>
+						<div style="padding-left: 40px;">&nbsp;</div>
+					<div style="padding-left: 40px;">&nbsp;</div>
+					<div style="padding-left: 40px;">Native Plant Program Leader - 
+						<em>Dana White</em> was transplanted to Juneau in 2001, leaving for Montana in 2013, and returned to the Mat-Su Valley in 2021. She brings over 15 years of experience of a diverse background in agriculture, horticulture, invasive species, restoration projects, food sustainability, landscape design, and project leadership – focused around plants and conservation efforts for our Alaskan soils and ecosystems. She spent 3 years establishing a successful Invasive Plant Program for the Juneau Cooperative Weed Management Area developing administration and the necessary communication experience needed to promote and encourage interagency support. Dana is excited to see sedges sprout and seed, and lead the pilot Native Plant Nurseries program. We will foster sustainable Native Plant Nurseries; so together, expand the knowledge we have to make available, propagate, and promote our Alaska native plants!
+
+					</div>
