--- a/index.html
+++ b/index.html
@@ -108,6 +108,9 @@
 								<a href="https://drive.google.com/drive/folders/1Zw5lC14JmXQiXpG07zFy4X4eggJajYNx?usp=sharing">Link To Property Inventory</a>
 							</li>
 							<h3 style="text-align: left;">
+								<a href="http://anchorageswcd.org/aboutus.html">About ASWCD</a>
+							</h3>
+							<h3 style="text-align: left;">
 								<a href="http://anchorageswcd.org/grants.html">Current Grants</a>
 							</h3>
 							<h3 style="text-align: left;">
