--- a/index.html
+++ b/index.html
@@ -122,6 +122,9 @@
 							<h3 style="text-align: left;">
 								<a href="http://anchorageswcd.org/farmers_markets.html">Anchorage Farmer's Market Map</a>
 							</h3>
+							<h3 style="text-align: left;">
+								<a href="http://anchorageswcd.org/Chokecherry FAQ.pdf">Chokecherry FAQ (PDF)</a>
+							</h3>
 							<h4 style="text-align: center;">Meetings Calendar:</h4>
 							<p style="text-align: center;">&nbsp;</p>
 							<p style="text-align: center;">
