--- a/index.html
+++ b/index.html
@@ -1,3 +1,4 @@
+
 <!DOCTYPE html>
 <html lang="en">
 	<head>
@@ -79,7 +80,21 @@
 						<h1>Anchorage Soil and Water Conservation District</h1>
 						<h3>A Member of the Alaska Association of Conservation Districts</h3>
 					</header>
+					
+
 					<section class="container">
+					    
+					    <h3>Career Opportunities:</h3>
+                        <ul>
+                            <li>
+                                <i class="fas fa-briefcase"></i>
+                                <a href="https://anchorageswcd.org/pdfs/Administrative%20Assistant%20Job%20Announcement%2011.7.23.pdf">Administrative Assistant - Job Description</a>
+                            </li>
+                            <li>
+                                <i class="fas fa-briefcase"></i>
+                                <a href="https://anchorageswcd.org/pdfs/Urban%20Agriculture%20Program%20Leader%20Job%20Announcement%2011.6.23.pdf">Urban Agriculture Program Leader - Job Description</a>
+                            </li>
+                        </ul>
 						<h3>Board of Supervisors:</h3>
 						<p>Steve Gerleck (Chair), Emily Davies (Vice Chair), Anne Billman (Secretary), and Hans Thompson (Treasurer)</p>
 						<p>Contact us at: 
