--- a/index.html
+++ b/index.html
@@ -86,7 +86,7 @@
 					    
 
 						<h3>Board of Supervisors:</h3>
-						<p>Steve Gerleck (Chair), Tony DeGange (Vice Chair), Anne Billman (Secretary), and Hans Thompson (Treasurer), Melody Price (At-Large)</p>
+						<p>Steve Gerleck (Chair), Tony DeGange (Vice Chair), Anne Billman (Secretary), Hans Thompson (Treasurer), and Melody Price (At-Large)</p>
 						<p>Contact us at: 
 							<a href="mailto:AnchorageSWCD@gmail.com">AnchorageSWCD@gmail.com</a>
 						</p>
