--- a/index.html
+++ b/index.html
@@ -108,9 +108,11 @@
 								<i class="fas fa-file-alt"></i>
 								<a href="https://drive.google.com/drive/folders/1Zw5lC14JmXQiXpG07zFy4X4eggJajYNx?usp=sharing">Link To Property Inventory</a>
 							</li>
-							<i class="fas fa-file-alt"></i>
+							<li class="fas fa-file-alt"></i>
 								<a href="http://anchorageswcd.org/photos.html">Photo Albums</a>
 							</li>
+
+							
 							<h3 style="text-align: left;">
 								<a href="http://anchorageswcd.org/aboutus.html">About ASWCD</a>
 							</h3>
