--- a/index.html
+++ b/index.html
@@ -108,7 +108,8 @@
 								<i class="fas fa-file-alt"></i>
 								<a href="https://drive.google.com/drive/folders/1Zw5lC14JmXQiXpG07zFy4X4eggJajYNx?usp=sharing">Link To Property Inventory</a>
 							</li>
-							<li class="fas fa-file-alt"></i>
+							<li>
+								<i class="fas fa-file-alt"></i>
 								<a href="http://anchorageswcd.org/photos.html">Photo Albums</a>
 							</li>
 
