--- a/photos.html
+++ b/photos.html
@@ -1,87 +1,97 @@
 <!DOCTYPE html>
 <html lang="en">
-	<head>
-		<meta charset="UTF-8">
-			<meta name="viewport" content="width=device-width, initial-scale=1.0">
-				<title>Anchorage Soil and Water Conservation District</title>
-				<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
-					<style>
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Anchorage Soil and Water Conservation District</title>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
+    <style>
         body {
-            font-family: Arial, sans-serif;
-            color: #333;
-            background-color: #f5f5f5;
-            line-height: 1.6;
+            font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+            color: #34495e;
+            background-color: #ecf0f1;
+            line-height: 1.8;
+            font-size: 16px;
+            margin: 0;
+            padding: 0;
         }
-    a {
-        color: #008c45;
-        text-decoration: none;
-    }
 
-    a:hover {
-        color: #00682b;
-    }
+        a {
+            color: #16a085;
+            text-decoration: none;
+        }
 
-    .container {
-        max-width: 1200px;
-        margin: 0 auto;
-        padding: 30px;
-    }
+        a:hover {
+            color: #1abc9c;
+            text-decoration: underline;
+        }
 
-    header {
-        background-color: #004d21;
-        padding: 20px;
-        text-align: center;
-        color: #fff;
-    }
+        .container {
+            max-width: 1200px;
+            margin: 0 auto;
+            padding: 30px;
+            box-shadow: 0 0 10px rgba(0,0,0,0.1);
+        }
 
-    header h1 {
-        font-size: 36px;
-        font-weight: normal;
-    }
+        header {
+            background-color: #2c3e50;
+            padding: 20px 0;
+            text-align: center;
+            color: #ecf0f1;
+        }
 
-    header h3 {
-        font-size: 18px;
-        font-weight: normal;
-        margin-top: 0;
-    }
+        header h1 {
+            font-size: 2.5rem; /* 36px */
+            font-weight: 300;
+        }
 
-    ul {
-        list-style-type: none;
-        margin: 0;
-        padding: 0;
-        display: flex;
-        flex-direction: column;
-        align-items: flex-start;
-        gap: 10px;
-    }
+        header h3 {
+            font-size: 1.125rem; /* 18px */
+            font-weight: 300;
+            margin-top: 0;
+        }
 
-    ul li {
-        font-size: 18px;
-    }
+        ul {
+            list-style: none;
+            padding: 0;
+            display: flex;
+            flex-direction: column;
+            align-items: center;
+            gap: 15px;
+        }
 
-    ul li i {
-        margin-right: 10px;
-    }
+        ul li {
+            font-size: 1.125rem; /* 18px */
+        }
 
-    h4 {
-        font-size: 22px;
-        font-weight: normal;
-        margin-bottom: 20px;
-    }
+        ul li i {
+            margin-right: 8px;
+        }
 
-    iframe {
-        border: 0;
-    }
-</style>
+        h4 {
+            font-size: 1.375rem; /* 22px */
+            font-weight: 400;
+            color: #2c3e50;
+            margin-bottom: 20px;
+        }
+
+        iframe {
+            border: none;
+        }
+    </style>
 </head>
 <body>
-    <h1>Photo Albums</h1>
-    <ul>
-        <li><a href="https://flic.kr/s/aHBqjBoKLZ">Native Plants Program</a></li>
-        <li><a href="https://flic.kr/s/aHBqjBoFWB">Invasive Plants Program</a></li>
-        <li><a href="https://flic.kr/s/aHBqjBoKMA">Urban Agriculture</a></li>
-        <li><a href="https://flic.kr/s/aHBqjBoFWd">General</a></li>
-    </ul>
+    <div class="container">
+        <header>
+            <h1>Photo Albums</h1>
+            <h3>Anchorage Soil and Water Conservation Programs</h3>
+        </header>
+        <ul>
+            <li><i class="fa fa-leaf" aria-hidden="true"></i><a href="https://flic.kr/s/aHBqjBoKLZ">Native Plants Program</a></li>
+            <li><i class="fa fa-bug" aria-hidden="true"></i><a href="https://flic.kr/s/aHBqjBoFWB">Invasive Plants Program</a></li>
+            <li><i class="fa fa-tree" aria-hidden="true"></i><a href="https://flic.kr/s/aHBqjBoKMA">Urban Agriculture</a></li>
+            <li><i class="fa fa-images" aria-hidden="true"></i><a href="https://flic.kr/s/aHBqjBoFWd">General</a></li>
+        </ul>
+    </div>
 </body>
 </html>
-
