--- a/meet_staff.html
+++ b/meet_staff.html
@@ -109,3 +109,8 @@
 					<div style="padding-left: 40px;">Administrative Assistant - 
 						<em>Deborah Buring</em> grew up near Fairbanks and participated in her family's annual 1 acre garden, of which a 10' x 10' plot was for her own use. Deborah has a Bachelor's degree in Anthropology from the University of Alaska Southeast and is currently enrolled in the master's degree program in anthropology/cultural resource management (archaeology) at Eastern New Mexico University. She is excited to support the efforts of the Anchorage Soil and Water Conservation District.
 					</div>
+     					<div style="padding-left: 40px;">&nbsp;</div>
+					<div style="padding-left: 40px;">&nbsp;</div>
+					<div style="padding-left: 40px;">Seasonal Native Plants Technician - 
+						<em>Sabrina Kessakorn</em> was born and raised on Dena'ina land, cultivating a deep connection to its lands, waters, wildlife, and peoples. Since graduating from UAA in 2021, she's gained 3 years of experience in conservation research and field work related to native plants. Passionate about conservation and connecting the community, Sabrina is eager to promote the Native Plants program!
+					</div>
