--- a/meet_staff.html
+++ b/meet_staff.html
@@ -106,7 +106,7 @@
 					</div>
      					<div style="padding-left: 40px;">&nbsp;</div>
 					<div style="padding-left: 40px;">&nbsp;</div>
-					<div style="padding-left: 40px;">Administrative Assistant - 
+					<div style="padding-left: 40px;">Grants Accounting Specialist - 
 						<em>Deborah Buring</em> grew up near Fairbanks and participated in her family's annual 1 acre garden, of which a 10' x 10' plot was for her own use. Deborah has a Bachelor's degree in Anthropology from the University of Alaska Southeast and is currently enrolled in the master's degree program in anthropology/cultural resource management (archaeology) at Eastern New Mexico University. She is excited to support the efforts of the Anchorage Soil and Water Conservation District.
 					</div>
      					<div style="padding-left: 40px;">&nbsp;</div>
